# GooseHDF5

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  README.md  environment.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-publish.yml
GooseHDF5/: __init__.py
GooseHDF5/cli/: G5check.py  G5compare.py  G5list.py  G5print.py  G5repack.py  G5repair.py
develop/G5find/: README.md
develop/G5merge/: gen.py
develop/G5repair/: README.md  gen.py
develop/G5select/: README.md
docs/: Makefile  conf.py  develop.rst  examples.rst  index.rst  make.bat  module.rst  tools.rst
docs/examples/: copy_modify-selection.py
test/: pytest
test/cli/: G5check.py  G5compare.py  G5list.py  G5print.py  G5repack.py  G5repair.py
tests/: cli.py  copying.py  dump.py  paths.py  test_cli.py  test_copying.py  test_dump.py  test_paths.py
tests/cli/: G5check.py  G5compare.py  G5list.py  G5print.py  G5repack.py  G5repair.py
